# PyOCSF

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/py_ocsf/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
