[project]
name = "py-ocsf"
version = "0.0.1"
description = "The Python OCSF Library"
readme = "README.md"

license = { text = "GNU GPLv3.0" }
authors = [
    { name = "River Studio", email = "pypi@river-studio.net" }
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = ["click>=8.0.0"]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "tox>=4.0.0",
  "pre-commit>=3.0.0",
  "coverage>=7.0.0",
  "nox>=2021.6.6",
]
lint = ["ruff>=0.1.0"]
safety = ["safety>=2.0.0"]
mypy = ["mypy>=1.0.0"]
typeguard = ["typeguard>=4.0.0"]
xdoctest = ["xdoctest>=1.0.0"]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.0.0",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-click>=5.0.0",
  "myst-parser>=3.0.0",
  "furo>=2024.3.28",
]

[project.urls]
Homepage = "https://github.com/river-studio-net/PyOCSF"
Repository = "https://github.com/river-studio-net/PyOCSF"
Documentation = "https://PyOCSF.readthedocs.io"
Changelog = "https://github.com/river-studio-net/PyOCSF/releases"

[tool.uv]
package = true

[project.scripts]
invoice2data = "invoice2data.__main__:main"


[tool.coverage.paths]
source = ["src/py_ocsf", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["py_ocsf", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "C90", # mccabe
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "RUF", # Ruff-specific rules
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
ignore = [
  "COM812",
  "COM819",
  "D107",   # undocumented-public-init conflicts with DOC301
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "ISC001",
  "ISC002",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]

[tool.ruff.lint.per-file-ignores]
"*/test_*.py" = ["S101"]
"noxfile.py" = ["S101"]
"**/conftest.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.nox|noxfile.py'
arg-type-hints-in-docstring = false
